# actix-diesel-sqlite

./: .gitignore  Cargo.toml  README.md
migrations/2019-10-09-083448_create_posts/: down.sql  up.sql
src/: db.rs  main.rs
src/db/: models.rs
