[package]
name = "actix-diesel-sqlite"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.4.6", features = ["sqlite"] }
dotenv = "0.9.0"

uuid = { version = "0.7", features = ["serde", "v4"] }